# LearnJNI

./: .gitignore  CMakeLists.txt  README.md
TheJavaNativeInterface/chapter02/: HelloWorld.c  HelloWorld.java  libHelloWorld.jnilib
TheJavaNativeInterface/chapter03/IntArray/: IntArray.c  IntArray.java  libIntArray.jnilib
TheJavaNativeInterface/chapter03/Prompt/: Prompt.c  Prompt.java  libPrompt.jnilib
docs/: AndroidNDK.md  TheJavaNativeInterface.md
